- trim console input values - use Gateways API filters - use predefined command ID - encode url
Change-Id: I5896d84a128f26a2b4d37387c13273c2915b8828